# ML_training_workflow

./: .dockerignore  .gitignore  Dockerfile  README.md  application_training.py  docker-compose.yml  pyproject.toml  utils.py
.github/workflows/: ci-cd.yml  ci.yml  comprehensive-tests.yml  test-pr.yml
data/: __init__.py  delta_lake.py  generate_database.py  generate_delta_lake.py
data/delta_lake/classification_data/: part-00001-afb60ff9-c2fd-40e2-b275-b3507317c191-c000.snappy.parquet  part-00001-bee51909-62f1-41ae-b5d7-314ef10d563a-c000.snappy.parquet
docs/: APPLICATIONS_GUIDE.md  CICD_GUIDE.md  DATA_GUIDE.md  DOCKER_GUIDE.md  FEATURE_STORE.md  MODULE_GUIDE.md  ORCHESTRATOR_GUIDE.md  SPECS_GUIDE.md
feature_store/: __init__.py  data_sources.py  feast_manager.py  feature_definitions.py
module/: __init__.py  calibration.py  classifier.py  mlflow_tracker.py  params_tuning.py  pre_processing.py
specs/: __init__.py  calibration_spec.py  feature_spec.py  feature_store_spec.py  mlflow_spec.py  model_spec.py  params_tuning_spec.py
specs_training/: calibration_spec.py  feature_spec.py  feature_store_spec.py  model_spec.py
src/: orchestrator.py
src_training/: __init__.py  orchestrator.py
tests/: README.md  __init__.py  conftest.py
tests/integration_tests/: __init__.py  test_application_integration.py  test_data_pipeline.py  test_mlflow_integration.py  test_training_workflow.py
tests/unit_tests/: __init__.py  conftest.py  test_application.py  test_calibration.py  test_calibration_spec.py  test_classifier.py  test_data_sources.py  test_feast_manager.py  test_feature_definitions.py  test_feature_spec.py  test_feature_store_spec.py  test_mlflow_spec.py  test_mlflow_tracker.py  test_model_spec.py  test_orchestrator.py  test_params_tuning.py  test_params_tuning_spec.py  test_pre_processing.py  test_utils.py
