[tool.poetry]
name = "ml-workflow"
version = "1.0.0"
description = "ML Workflow with Pydantic validation, MLflow tracking, and comprehensive testing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "specs" },
    { include = "module" },
    { include = "data" },
    { include = "src" },
    { include = "feature_store" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
pydantic = "^2.0.0"
mlflow = "^2.0.0"
joblib = "^1.0.0"
feast = "^0.38.0"
pyarrow = ">=14.0.0,<22.0.0"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
deltalake = "^0.19.0"
tqdm = "^4.66.0"
requests = "^2.31.0"
setuptools = "^75.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
ml-train = "application_training:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=specs",
    "--cov=module",
    "--cov=src",
    "--cov=data",
    "--cov=feature_store",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
    "joblib.*",
    "pyspark.*",
    "delta.*",
    "feast.*",
    "redis.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["specs", "module", "src", "data", "feature_store"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

